--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     alt="icone linkedin"></a>
     <a href="https://instagram.com/marcelopaludetto"><img
     
-    class="profissao-icone" src="instagram.png"
+    class="profissao-icone" src="img/instagram.png"
     alt="icone instagram"></a>
     
     </div>
